no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-08-25 19:40:53 25.8.25
no qc pass: wireguard over asymmetric ports
failed: wireguard over asymmetric ports
---------------------------------- 2025-08-25 20:23:49 25.8.25
no failed: wireguard over asymmetric ports
qc pass: wireguard over asymmetric ports
---------------------------------- 2025-08-29 12:37:44 25.8.29
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-08-29 13:15:00 25.8.29
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-08-30 06:20:29 25.8.30
qc pass: gre with checksum
qc pass: gre with sequence
qc pass: gre with key
qc pass: gre with everything
qc pass: gre with asymmetric key
---------------------------------- 2025-08-31 20:15:18 25.8.31
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-08-31 21:15:13 25.8.31
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-09-01 22:02:24 25.9.1
no qc pass: wireguard over ipv6
failed: wireguard over ipv6
---------------------------------- 2025-09-01 22:45:31 25.9.1
no failed: wireguard over ipv6
qc pass: wireguard over ipv6
---------------------------------- 2025-09-03 14:19:10 25.9.3
no qc pass: wireguard over wireguard
failed: wireguard over wireguard
---------------------------------- 2025-09-03 14:57:26 25.9.3
no failed: wireguard over wireguard
qc pass: wireguard over wireguard
---------------------------------- 2025-09-10 05:16:12 25.9.10
no qc pass: wireguard over ipv4
failed: wireguard over ipv4
---------------------------------- 2025-09-10 06:33:02 25.9.10
no failed: wireguard over ipv4
qc pass: wireguard over ipv4
---------------------------------- 2025-09-16 16:50:55 25.9.16
no qc pass: wireguard over ipv4
failed: wireguard over ipv4