@@ -17525,3 +17525,6 @@ qc pass: wireguard over ipv4
 ---------------------------------- 2025-09-16 16:50:55 25.9.16
 no qc pass: wireguard over ipv4
 failed: wireguard over ipv4
+---------------------------------- 2025-09-16 17:26:09 25.9.16
+no failed: wireguard over ipv4
+qc pass: wireguard over ipv4
